--- a/css/styles.css
+++ b/css/styles.css
@@ -63,3 +63,16 @@ iframe {
     height: 100%; /* Modifié pour utiliser toute la hauteur disponible du conteneur */
     box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Ombre portée pour l'iframe */
 }
+
+/* Styles pour les logos des ODD dans la grille */
+.cube-logo img {
+    transition: transform 0.3s, filter 0.3s;
+    cursor: pointer;
+    margin: 0 auto; /* Centre l'image dans la colonne */
+    width: 100%; /* Assurez-vous que les images ne dépassent pas de leur colonne */
+}
+
+.cube-logo:hover img {
+    transform: scale(1.1);
+    filter: brightness(1.5);
+}
