--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ iframe {
     transition: transform 0.3s, filter 0.3s;
     cursor: pointer;
     margin: 0 auto; /* Centre l'image dans la colonne */
-    width: 50px; /* Nouvelle taille des icônes */
+    max-width: 100%; /* Taille maximale de l'image */
     margin-bottom: 10px; /* Espacement entre les icônes */
     border-radius: 50%; /* Bords arrondis */
 }
