--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,7 @@ body, html {
     padding: 20px; /* Ajouté pour un espacement intérieur */
     margin: 20px; /* Ajouté pour un espacement extérieur */
     border-radius: 10px; /* Bords arrondis */
+    position: relative; /* Position relative pour les éléments enfants positionnés absolument */
 }
 
 iframe {
@@ -66,6 +67,18 @@ iframe {
     width: 100%;
     height: 100%; /* Modifié pour utiliser toute la hauteur disponible du conteneur */
     box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Ombre portée pour l'iframe */
+    position: absolute; /* Position absolue pour remplir le conteneur */
+    top: 0;
+    left: 0;
+}
+
+.banner-container {
+    position: absolute; /* Position absolue pour placer la bannière */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto; /* Hauteur automatique pour adapter à la largeur */
+    z-index: -1; /* Pour placer la bannière en arrière-plan */
 }
 
 /* Styles pour les logos des ODD dans la grille */
