--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ iframe {
 
 .banner-container {
     position: absolute;
-    top: 0;
+    top: 50px;
     left: 0;
     width: 100%;
     height: auto; 
