--- a/css/styles.css
+++ b/css/styles.css
@@ -10,19 +10,19 @@ body, html {
     display: grid;
     grid-template-columns: 1fr 3fr;
     height: 100vh;
-    margin: 0; 
-    overflow: hidden; 
+    margin: 0;
+    overflow: hidden;
 }
 
 #menu-container {
-    background-color: #003366; 
-    padding: 10px; 
+    background-color: #003366;
+    padding: 10px;
     color: white;
-    border-radius: 10px; 
-    height: 100vh; 
+    border-radius: 10px;
+    height: 100vh;
     display: flex;
-    flex-direction: column; 
-    justify-content: space-between; 
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 #links-container h1 {
@@ -33,7 +33,7 @@ body, html {
 #links-container ul {
     list-style-type: none;
     padding: 0;
-    margin: 0; 
+    margin: 0;
 }
 
 #links-container li a {
@@ -41,13 +41,13 @@ body, html {
     color: white;
     display: block;
     padding: 10px;
-    border-radius: 10px; 
-    transition: background-color 0.3s, transform 0.2s ease; 
+    border-radius: 10px;
+    transition: background-color 0.3s, transform 0.2s ease;
 }
 
 #links-container li a:hover {
     background-color: #0055b3;
-    transform: translateX(5px); 
+    transform: translateX(5px);
 }
 
 #cube-container {
@@ -56,12 +56,12 @@ body, html {
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    padding: 20px; 
-    margin: 20px; 
-    border-radius: 10px; 
-    margin-top: 120px; 
-    position: relative; 
-    height: calc(100vh - 240px); /* Hauteur totale moins la marge du haut et du bas */
+    padding: 20px;
+    margin: 20px;
+    border-radius: 10px;
+    margin-top: 120px;
+    position: relative;
+    height: calc(100vh - 240px); /* Adjusted height calculation */
 }
 
 iframe {
@@ -73,20 +73,21 @@ iframe {
 
 .banner-container {
     position: absolute;
-    top: 50px;
+    top: 0; /* Adjusted for better alignment */
     left: 0;
-    width: 100%;
-    height: auto; 
-    z-index: -1; 
+    width: 70%; /* Adjusted width for better fit */
+    margin: 0 auto; /* Centering the banner */
+    height: auto;
+    z-index: 10; /* Adjusted z-index for visibility */
 }
 
 .cube-logo img {
     transition: transform 0.3s, filter 0.3s;
     cursor: pointer;
     margin: 0 auto;
-    max-width: 100%; 
-    margin-bottom: 10px; 
-    border-radius: 10px; 
+    max-width: 100%;
+    margin-bottom: 10px;
+    border-radius: 10px;
 }
 
 .cube-logo:hover img {
