--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,15 @@ body, html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f4f4f4;
     color: #333;
+    overflow: hidden; /* Empêche le débordement de la page */
 }
 
 #main-container {
     display: grid;
     grid-template-columns: 1fr 3fr;
-    height: 100vh;
+    height: 100vh; /* Hauteur fixée à 100% de la hauteur de la fenêtre du navigateur */
     margin: 0;
-    overflow: hidden;
+    overflow: hidden; /* Empêche le débordement des contenus internes */
 }
 
 #menu-container {
@@ -19,7 +20,7 @@ body, html {
     padding: 10px;
     color: white;
     border-radius: 10px;
-    height: 100vh;
+    height: 100%; /* Adapte la hauteur au conteneur parent */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -59,9 +60,7 @@ body, html {
     padding: 20px;
     margin: 20px;
     border-radius: 10px;
-    margin-top: 120px;
-    position: relative;
-    height: calc(100vh - 240px); /* Adjusted height calculation */
+    height: calc(100vh - 40px); /* Calcule la hauteur pour s'adapter à la fenêtre */
 }
 
 iframe {
@@ -73,12 +72,11 @@ iframe {
 
 .banner-container {
     position: absolute;
-    top: 50px; /* Adjusted for better alignment */
-    left: 10px;
-    width: 70%; /* Adjusted width for better fit */
-    margin: 0 auto; /* Centering the banner */
-    height: auto;
-    z-index: 10; /* Adjusted z-index for visibility */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px; /* Hauteur fixée pour les bannières */
+    z-index: 10;
 }
 
 .cube-logo img {
